--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-jest": "24.9.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "firebase": "^7.15.5",
     "jest": "24.9.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -19,7 +20,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
